# vocalize

./: .gitignore  Makefile  README.md  pyrecord  pyrecord.py  pyrecord.sh  setup.cfg  vocalize  vocalize.desktop
debian/: changelog  control  install  rules
scripts/: inotify-wait-audio.sh  inotify-wait-text.sh
src/vocalize/: __main__.py
src/vocalize.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
