[metadata]
name = vocalize
version = 0.1.0
author = Edimar Calebe Castanho
author_email = contato@calebe.dev.br
description = O Vocalize é uma ferramenta simples desenvolvida em Python para gravar voz e transformá-la em texto.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/calebe94/vocalize
license = GPL3+
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/calebe94/vocalize/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = PyGObject

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    vocalize=vocalize.__main__:main
